--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
             <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/pattern-Item_%EC%A3%BC%EC%82%AC%EC%9C%84.patt">
                 <a-box position='0 0.5 0' material='color: black;' soundhandler></a-box>
         </a-marker>
+            
+                        <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/lbelfield/augmented-reality/master/src/components/trainTicket/train-ticket.patt">
+                <a-box position='0 0.5 0' material='color: black;' soundhandler></a-box>
+        </a-marker>
         <a-entity camera></a-entity>
         </a-scene>
     </body>
