--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 		                                    <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/pattern-television.patt">
                 <a-box position='0 0.5 0' material='color: black;' soundhandler></a-box>
         </a-marker>
+		
+		
+		 <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/pattern-kissclipart-black-cat-cat-black-silhouette-small-to-medium-siz-373d9248e5de2355.patt">
+                <a-box position='0 0.5 0' material='color: white;' soundhandler></a-box>
+        </a-marker>
         <a-entity camera></a-entity>
 
     </body>
