--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </a-marker>
 		
 		
-		 <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/pattern-kissclipart-black-cat-cat-black-silhouette-small-to-medium-siz-373d9248e5de2355.patt">
+		 <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/dice.patt">
                 <a-box position='0 0.5 0' material='color: white;' soundhandler></a-box>
         </a-marker>
         <a-entity camera></a-entity>
-
+        </a-scene>
     </body>
 </html>
