--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </a-marker>
 		
 		
-		 <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/dice.patt">
-                <a-box position='0 0.5 0' material='color: white;' soundhandler></a-box>
+		 <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/pattern-test.patt">
+                <a-box position='0 0.5 0' material='color: black;' soundhandler></a-box>
         </a-marker>
         <a-entity camera></a-entity>
         </a-scene>
