--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-
-            
-                        <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/ticket.patt">
-                <a-box position='0 0.5 0' material='color: black;' soundhandler></a-box>
-        </a-marker>
-		
-		                                    <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/pattern-television.patt">
-                <a-box position='0 0.5 0' material='color: black;' soundhandler></a-box>
-        </a-marker>
-		
-		
-		 <a-marker preset="pattern" type="pattern" url="https://raw.githubusercontent.com/meowljane/pattern/main/pattern-test.patt">
-                <a-box position='0 0.5 0' material='color: black;' soundhandler></a-box>
+        <a-marker preset="hiro">
+            <a-entity
+            position="0 -1 0"
+            scale="0.5 0.5 0.5"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled.obj);
+               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled.mtl)"
+            ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
         </a-scene>
