--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
             <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled.obj);
-               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled.mtl)"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-1.obj);
+               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-1.mtl)"
+            ></a-entity>
+        </a-marker>
+            
+                    <a-marker preset="kanji">
+            <a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-2.obj);
+               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-2.mtl)"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
