--- a/index.html
+++ b/index.html
@@ -4,22 +4,13 @@
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
-        <a-scene embedded arjs>
-        <a-marker preset="hiro">
+        <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+        <a-marker type='barcode' value='5'>
             <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
             obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-1.obj);
                mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-1.mtl)"
-            ></a-entity>
-        </a-marker>
-            
-                    <a-marker preset="kanji">
-            <a-entity
-            position="0 0 0"
-            scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-2.obj);
-               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-2.mtl)"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
