--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
             <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-1.obj);
-               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-1.mtl)"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/2-1.obj);"
             ></a-entity>
         </a-marker>
 
@@ -19,8 +18,7 @@
             <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-2.obj);
-               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-2.mtl)"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/2-2.obj);"
             ></a-entity>
         </a-marker>
 
@@ -30,8 +28,7 @@
             <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-3.obj);
-               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-3.mtl)"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/2-3.obj);"
             ></a-entity>
         </a-marker>
                          
@@ -41,8 +38,7 @@
             <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-4.obj);
-               mtl: url(https://raw.githubusercontent.com/meowljane/pattern/main/1-4.mtl)"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/2-4.obj);"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
