--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-        <a-marker type='barcode' value='1'>
+        <a-marker-camera type='pattern' url='https://raw.githubusercontent.com/meowljane/pattern/main/one.patt'></a-marker-camera>
             <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
