--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
-      <a-scene embedded arjs>
+        <a-scene embedded arjs>
         <a-marker-camera type='pattern' url='https://raw.githubusercontent.com/meowljane/pattern/main/one.patt'></a-marker-camera>
             <a-entity
-            position="0 0 0"
-            scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled.obj);"
+            position="0 -1 0"
+            scale="0.05 0.05 0.05"
+            obj-model="https://raw.githubusercontent.com/meowljane/pattern/main/untitled.obj"
             ></a-entity>
         </a-marker>
-
-
-        <a-entity camera></a-entity>
-            
-            
         <a-entity camera></a-entity>
         </a-scene>
     </body>
