--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-        <a-marker-camera type='pattern' url='https://raw.githubusercontent.com/meowljane/pattern/main/one.patt'></a-marker-camera>
+        <a-marker-camera type='pattern' url='https://raw.githubusercontent.com/meowljane/pattern/main/one.patt'>
             <a-entity
             position="0 -1 0"
             scale="0.05 0.05 0.05"
