--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <a-entity
             position="0 -1 0"
             scale="0.05 0.05 0.05"
-            obj-model="https://raw.githubusercontent.com/meowljane/pattern/main/untitled.obj"
+            obj-model="./untitled.obj"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
