--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 
 
 		<a-marker preset='hiro'>
-			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:red;'>
-				<a-torus-knot radius='0.26' radius-tubular='0.05'
-				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true">
-				</a-torus-knot>
-			</a-box>
+			<a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled.obj);"
+            ></a-entity>
 		</a-marker>
 
         
 		<a-marker preset='kanji'>
-			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:green;'>
-				<a-torus-knot radius='0.26' radius-tubular='0.05'
-				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true">
-				</a-torus-knot>
-			</a-box>
+			<a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled2.obj);"
+            ></a-entity>
 		</a-marker>
 
 		<!-- add a simple camera -->
