--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
             ></a-entity>
 		</a-marker>
 
+		
+		<a-marker-camera type='pattern' url='https://raw.githubusercontent.com/meowljane/pattern/main/one.patt'>
+			<a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled3.obj);"
+            ></a-entity>
+		</a-marker>
+		
+		
 		<!-- add a simple camera -->
 		<a-entity camera></a-entity>
 	</a-scene>
