--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</a-marker>
 
 		
-		<a-marker-camera type='pattern' url='https://raw.githubusercontent.com/meowljane/pattern/main/one.patt'>
+		<a-marker type='pattern' url='https://raw.githubusercontent.com/meowljane/pattern/main/one.patt'>
 			<a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
