--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            obj-model="obj: url(https://raw.githubusercontent.com/meowljane/pattern/main/untitled3.obj);"
+            gltf-model="https://raw.githubusercontent.com/meowljane/pattern/main/1.glb"
             ></a-entity>
 		</a-marker>
 		
