--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <script src="./aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="./aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
 	<a-scene embedded>
 
